creating started fileService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/eoss
+spring.datasource.url=jdbc:mysql://sl-eu-lon-2-portal.7.dblayer.com:23257/eoss?useSSL=false
 # TODO: Credentials are to be changed!!! @g_f0x
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=admin
+spring.datasource.password=RYWSYSZYKEAGFKAO
 # TODO: create migrations in '/resources/db/migration' @g_f0x
