refactor entities, add foreign keys, add tech entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/eoss
+spring.datasource.url=jdbc:mysql://194.44.143.140:3306/team1
 # TODO: Credentials are to be changed!!! @g_f0x
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=team1
+spring.datasource.password=YpykXM3Gxt9wY6q5
 # TODO: create migrations in '/resources/db/migration' @g_f0x
+spring.thymeleaf.cache=false
